skipDaysPeriod amounts are now substracted from invoices